Fix horizontal scrollbar

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -894,9 +894,9 @@ body:not(.post-template) .post-title {
 /* Break out larger images to be wider than the main text column
    the class is applied with jQuery */
 .post-content .full-img {
-    width: 126%;
+    width: 125%;
     max-width: none;
-    margin: 0 -13%;
+    margin: 0 -12.5%;
 }
 
 /* The author credit area after the post */
